parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    ABS
    ACOS
    ACOSD
    ACOSH
    ADD
    ALL
    ANY
    AS
    ASC
    ASIN
    ASIND
    ASINH
    ATAN
    ATAN2
    ATANH
    AUTO_INCREMENT
    AVG
    BEGIN
    BETWEEN
    BIGINT
    BOOLEAN
    BY
    CADENA
    CASE
    CBRT
    CEIL
    CEILING
    CHAR
    CHARACTER
    CHECK
    COLOCHO
    COLUMN
    COLUMNS
    COMA
    CONCAT
    CONSTRAINT
    CONT
    CONVERT
    CORCHETEDER
    CORCHETEIZQ
    COS
    COSD
    COSH
    COT
    COTD
    DATE
    DAY
    DECIMALTOKEN
    DECLARE
    DECODE
    DEFAULT
    DEGREES
    DELETE
    DESC
    DISTINCT
    DOSPUNTOS
    DOUBLE
    ELSE
    ENCODE
    END
    ENUM
    ESCAPE
    ETIQUETA
    EXCEPT
    EXP
    FACTORIAL
    FALSE
    FIRST
    FLOOR
    FOREIGN
    FROM
    FULL
    FUNCTION
    GCD
    GET_BYTE
    GREATEST
    GROUP
    HAVING
    HOUR
    ILIKE
    IN
    INGERITS
    INHERITS
    INNER
    INSERT
    INTEGER
    INTERSECT
    INTERVAL
    INTO
    IS
    ISNULL
    JOIN
    KEY
    LAST
    LCM
    LEAST
    LEFT
    LENGTH
    LIKE
    LIMIT
    LN
    LOG
    LOG10
    MAX
    MD5
    MIN
    MINUTE
    MIN_SCALE
    MOD
    MONEY
    MONTH
    NATURAL
    NOT
    NOTNULL
    NULL
    NULLS
    NUMERAL
    NUMERIC
    OF
    OFFSET
    ON
    ONLY
    ORDER
    OUTER
    PI
    POWER
    PRIMARY
    RADIANS
    RANDOM
    REAL
    REFERENCES
    RETURNING
    RETURNS
    RIGHT
    ROUND
    SCALE
    SECOND
    SELECT
    SET
    SETSEED
    SET_BYTE
    SHA256
    SIMBOLOAND
    SIN
    SIND
    SING
    SINH
    SMALLINT
    SOME
    SQRT
    SUBSTR
    SUBSTRING
    SUM
    SYMMETRIC
    TABLE
    TABLES
    TAN
    TAND
    TANH
    TEXT
    THEN
    TIME
    TIMESTAMP
    TRIM
    TRIM_SCALE
    TRUC
    TRUE
    TYPE
    TYPECAST
    UNION
    UNIQUE
    UNKNOWN
    UPDATE
    UPPER
    USING
    VALUES
    VARCHAR
    VARYING
    VIEW
    WHEN
    WHERE
    WIDTH_BUCKET
    YEAR

Grammar

Rule 0     S' -> inicio
Rule 1     inicio -> queries
Rule 2     queries -> queries query
Rule 3     queries -> query
Rule 4     query -> mostrarBD
Rule 5     query -> crearBD
Rule 6     query -> alterBD
Rule 7     query -> dropBD
Rule 8     query -> operacion
Rule 9     crearBD -> CREATE DATABASE ID PUNTOYCOMA
Rule 10    crearBD -> CREATE OR REPLACE DATABASE ID PUNTOYCOMA
Rule 11    crearBD -> CREATE OR REPLACE DATABASE ID parametrosCrearBD PUNTOYCOMA
Rule 12    crearBD -> CREATE DATABASE ID parametrosCrearBD PUNTOYCOMA
Rule 13    parametrosCrearBD -> parametrosCrearBD parametroCrearBD
Rule 14    parametrosCrearBD -> parametroCrearBD
Rule 15    parametroCrearBD -> OWNER IGUAL final
Rule 16    parametroCrearBD -> MODE IGUAL final
Rule 17    mostrarBD -> SHOW DATABASES PUNTOYCOMA
Rule 18    alterBD -> ALTER DATABASE ID RENAME TO ID PUNTOYCOMA
Rule 19    alterBD -> ALTER DATABASE ID OWNER TO parametroAlterUser PUNTOYCOMA
Rule 20    parametroAlterUser -> CURRENT_USER
Rule 21    parametroAlterUser -> SESSION_USER
Rule 22    parametroAlterUser -> final
Rule 23    dropBD -> DROP DATABASE ID PUNTOYCOMA
Rule 24    dropBD -> DROP DATABASE IF EXISTS ID PUNTOYCOMA
Rule 25    operacion -> operacion MAS operacion
Rule 26    operacion -> operacion MENOS operacion
Rule 27    operacion -> operacion POR operacion
Rule 28    operacion -> operacion DIV operacion
Rule 29    operacion -> operacion RESIDUO operacion
Rule 30    operacion -> operacion POTENCIA operacion
Rule 31    operacion -> operacion AND operacion
Rule 32    operacion -> operacion OR operacion
Rule 33    operacion -> operacion SIMBOLOOR2 operacion
Rule 34    operacion -> operacion SIMBOLOOR operacion
Rule 35    operacion -> operacion SIMBOLOAND2 operacion
Rule 36    operacion -> operacion DESPLAZAMIENTOIZQUIERDA operacion
Rule 37    operacion -> operacion DESPLAZAMIENTODERECHA operacion
Rule 38    operacion -> operacion IGUALIGUAL operacion
Rule 39    operacion -> operacion NOTEQUAL operacion
Rule 40    operacion -> operacion MAYORIGUAL operacion
Rule 41    operacion -> operacion MENORIGUAL operacion
Rule 42    operacion -> operacion MAYOR operacion
Rule 43    operacion -> operacion MENOR operacion
Rule 44    operacion -> operacion DIFERENTE operacion
Rule 45    operacion -> PARENTESISIZQUIERDA operacion PARENTESISDERECHA
Rule 46    operacion -> final
Rule 47    operacion -> MENOS ENTERO
Rule 48    final -> DECIMAL
Rule 49    final -> ENTERO
Rule 50    final -> ID
Rule 51    final -> ID PUNTO ID

Terminals, with rules where they appear

ABS                  : 
ACOS                 : 
ACOSD                : 
ACOSH                : 
ADD                  : 
ALL                  : 
ALTER                : 18 19
AND                  : 31
ANY                  : 
AS                   : 
ASC                  : 
ASIN                 : 
ASIND                : 
ASINH                : 
ATAN                 : 
ATAN2                : 
ATANH                : 
AUTO_INCREMENT       : 
AVG                  : 
BEGIN                : 
BETWEEN              : 
BIGINT               : 
BOOLEAN              : 
BY                   : 
CADENA               : 
CASE                 : 
CBRT                 : 
CEIL                 : 
CEILING              : 
CHAR                 : 
CHARACTER            : 
CHECK                : 
COLOCHO              : 
COLUMN               : 
COLUMNS              : 
COMA                 : 
CONCAT               : 
CONSTRAINT           : 
CONT                 : 
CONVERT              : 
CORCHETEDER          : 
CORCHETEIZQ          : 
COS                  : 
COSD                 : 
COSH                 : 
COT                  : 
COTD                 : 
CREATE               : 9 10 11 12
CURRENT_USER         : 20
DATABASE             : 9 10 11 12 18 19 23 24
DATABASES            : 17
DATE                 : 
DAY                  : 
DECIMAL              : 48
DECIMALTOKEN         : 
DECLARE              : 
DECODE               : 
DEFAULT              : 
DEGREES              : 
DELETE               : 
DESC                 : 
DESPLAZAMIENTODERECHA : 37
DESPLAZAMIENTOIZQUIERDA : 36
DIFERENTE            : 44
DISTINCT             : 
DIV                  : 28
DOSPUNTOS            : 
DOUBLE               : 
DROP                 : 23 24
ELSE                 : 
ENCODE               : 
END                  : 
ENTERO               : 47 49
ENUM                 : 
ESCAPE               : 
ETIQUETA             : 
EXCEPT               : 
EXISTS               : 24
EXP                  : 
FACTORIAL            : 
FALSE                : 
FIRST                : 
FLOOR                : 
FOREIGN              : 
FROM                 : 
FULL                 : 
FUNCTION             : 
GCD                  : 
GET_BYTE             : 
GREATEST             : 
GROUP                : 
HAVING               : 
HOUR                 : 
ID                   : 9 10 11 12 18 18 19 23 24 50 51 51
IF                   : 24
IGUAL                : 15 16
IGUALIGUAL           : 38
ILIKE                : 
IN                   : 
INGERITS             : 
INHERITS             : 
INNER                : 
INSERT               : 
INTEGER              : 
INTERSECT            : 
INTERVAL             : 
INTO                 : 
IS                   : 
ISNULL               : 
JOIN                 : 
KEY                  : 
LAST                 : 
LCM                  : 
LEAST                : 
LEFT                 : 
LENGTH               : 
LIKE                 : 
LIMIT                : 
LN                   : 
LOG                  : 
LOG10                : 
MAS                  : 25
MAX                  : 
MAYOR                : 42
MAYORIGUAL           : 40
MD5                  : 
MENOR                : 43
MENORIGUAL           : 41
MENOS                : 26 47
MIN                  : 
MINUTE               : 
MIN_SCALE            : 
MOD                  : 
MODE                 : 16
MONEY                : 
MONTH                : 
NATURAL              : 
NOT                  : 
NOTEQUAL             : 39
NOTNULL              : 
NULL                 : 
NULLS                : 
NUMERAL              : 
NUMERIC              : 
OF                   : 
OFFSET               : 
ON                   : 
ONLY                 : 
OR                   : 10 11 32
ORDER                : 
OUTER                : 
OWNER                : 15 19
PARENTESISDERECHA    : 45
PARENTESISIZQUIERDA  : 45
PI                   : 
POR                  : 27
POTENCIA             : 30
POWER                : 
PRIMARY              : 
PUNTO                : 51
PUNTOYCOMA           : 9 10 11 12 17 18 19 23 24
RADIANS              : 
RANDOM               : 
REAL                 : 
REFERENCES           : 
RENAME               : 18
REPLACE              : 10 11
RESIDUO              : 29
RETURNING            : 
RETURNS              : 
RIGHT                : 
ROUND                : 
SCALE                : 
SECOND               : 
SELECT               : 
SESSION_USER         : 21
SET                  : 
SETSEED              : 
SET_BYTE             : 
SHA256               : 
SHOW                 : 17
SIMBOLOAND           : 
SIMBOLOAND2          : 35
SIMBOLOOR            : 34
SIMBOLOOR2           : 33
SIN                  : 
SIND                 : 
SING                 : 
SINH                 : 
SMALLINT             : 
SOME                 : 
SQRT                 : 
SUBSTR               : 
SUBSTRING            : 
SUM                  : 
SYMMETRIC            : 
TABLE                : 
TABLES               : 
TAN                  : 
TAND                 : 
TANH                 : 
TEXT                 : 
THEN                 : 
TIME                 : 
TIMESTAMP            : 
TO                   : 18 19
TRIM                 : 
TRIM_SCALE           : 
TRUC                 : 
TRUE                 : 
TYPE                 : 
TYPECAST             : 
UNION                : 
UNIQUE               : 
UNKNOWN              : 
UPDATE               : 
UPPER                : 
USING                : 
VALUES               : 
VARCHAR              : 
VARYING              : 
VIEW                 : 
WHEN                 : 
WHERE                : 
WIDTH_BUCKET         : 
YEAR                 : 
error                : 

Nonterminals, with rules where they appear

alterBD              : 6
crearBD              : 5
dropBD               : 7
final                : 15 16 22 46
inicio               : 0
mostrarBD            : 4
operacion            : 8 25 25 26 26 27 27 28 28 29 29 30 30 31 31 32 32 33 33 34 34 35 35 36 36 37 37 38 38 39 39 40 40 41 41 42 42 43 43 44 44 45
parametroAlterUser   : 19
parametroCrearBD     : 13 14
parametrosCrearBD    : 11 12 13
queries              : 1 2
query                : 2 3

Parsing method: LALR

state 0

    (0) S' -> . inicio
    (1) inicio -> . queries
    (2) queries -> . queries query
    (3) queries -> . query
    (4) query -> . mostrarBD
    (5) query -> . crearBD
    (6) query -> . alterBD
    (7) query -> . dropBD
    (8) query -> . operacion
    (17) mostrarBD -> . SHOW DATABASES PUNTOYCOMA
    (9) crearBD -> . CREATE DATABASE ID PUNTOYCOMA
    (10) crearBD -> . CREATE OR REPLACE DATABASE ID PUNTOYCOMA
    (11) crearBD -> . CREATE OR REPLACE DATABASE ID parametrosCrearBD PUNTOYCOMA
    (12) crearBD -> . CREATE DATABASE ID parametrosCrearBD PUNTOYCOMA
    (18) alterBD -> . ALTER DATABASE ID RENAME TO ID PUNTOYCOMA
    (19) alterBD -> . ALTER DATABASE ID OWNER TO parametroAlterUser PUNTOYCOMA
    (23) dropBD -> . DROP DATABASE ID PUNTOYCOMA
    (24) dropBD -> . DROP DATABASE IF EXISTS ID PUNTOYCOMA
    (25) operacion -> . operacion MAS operacion
    (26) operacion -> . operacion MENOS operacion
    (27) operacion -> . operacion POR operacion
    (28) operacion -> . operacion DIV operacion
    (29) operacion -> . operacion RESIDUO operacion
    (30) operacion -> . operacion POTENCIA operacion
    (31) operacion -> . operacion AND operacion
    (32) operacion -> . operacion OR operacion
    (33) operacion -> . operacion SIMBOLOOR2 operacion
    (34) operacion -> . operacion SIMBOLOOR operacion
    (35) operacion -> . operacion SIMBOLOAND2 operacion
    (36) operacion -> . operacion DESPLAZAMIENTOIZQUIERDA operacion
    (37) operacion -> . operacion DESPLAZAMIENTODERECHA operacion
    (38) operacion -> . operacion IGUALIGUAL operacion
    (39) operacion -> . operacion NOTEQUAL operacion
    (40) operacion -> . operacion MAYORIGUAL operacion
    (41) operacion -> . operacion MENORIGUAL operacion
    (42) operacion -> . operacion MAYOR operacion
    (43) operacion -> . operacion MENOR operacion
    (44) operacion -> . operacion DIFERENTE operacion
    (45) operacion -> . PARENTESISIZQUIERDA operacion PARENTESISDERECHA
    (46) operacion -> . final
    (47) operacion -> . MENOS ENTERO
    (48) final -> . DECIMAL
    (49) final -> . ENTERO
    (50) final -> . ID
    (51) final -> . ID PUNTO ID

    SHOW            shift and go to state 9
    CREATE          shift and go to state 10
    ALTER           shift and go to state 12
    DROP            shift and go to state 13
    PARENTESISIZQUIERDA shift and go to state 15
    MENOS           shift and go to state 14
    DECIMAL         shift and go to state 18
    ENTERO          shift and go to state 17
    ID              shift and go to state 11

    inicio                         shift and go to state 1
    queries                        shift and go to state 2
    query                          shift and go to state 3
    mostrarBD                      shift and go to state 4
    crearBD                        shift and go to state 5
    alterBD                        shift and go to state 6
    dropBD                         shift and go to state 7
    operacion                      shift and go to state 8
    final                          shift and go to state 16

state 1

    (0) S' -> inicio .



state 2

    (1) inicio -> queries .
    (2) queries -> queries . query
    (4) query -> . mostrarBD
    (5) query -> . crearBD
    (6) query -> . alterBD
    (7) query -> . dropBD
    (8) query -> . operacion
    (17) mostrarBD -> . SHOW DATABASES PUNTOYCOMA
    (9) crearBD -> . CREATE DATABASE ID PUNTOYCOMA
    (10) crearBD -> . CREATE OR REPLACE DATABASE ID PUNTOYCOMA
    (11) crearBD -> . CREATE OR REPLACE DATABASE ID parametrosCrearBD PUNTOYCOMA
    (12) crearBD -> . CREATE DATABASE ID parametrosCrearBD PUNTOYCOMA
    (18) alterBD -> . ALTER DATABASE ID RENAME TO ID PUNTOYCOMA
    (19) alterBD -> . ALTER DATABASE ID OWNER TO parametroAlterUser PUNTOYCOMA
    (23) dropBD -> . DROP DATABASE ID PUNTOYCOMA
    (24) dropBD -> . DROP DATABASE IF EXISTS ID PUNTOYCOMA
    (25) operacion -> . operacion MAS operacion
    (26) operacion -> . operacion MENOS operacion
    (27) operacion -> . operacion POR operacion
    (28) operacion -> . operacion DIV operacion
    (29) operacion -> . operacion RESIDUO operacion
    (30) operacion -> . operacion POTENCIA operacion
    (31) operacion -> . operacion AND operacion
    (32) operacion -> . operacion OR operacion
    (33) operacion -> . operacion SIMBOLOOR2 operacion
    (34) operacion -> . operacion SIMBOLOOR operacion
    (35) operacion -> . operacion SIMBOLOAND2 operacion
    (36) operacion -> . operacion DESPLAZAMIENTOIZQUIERDA operacion
    (37) operacion -> . operacion DESPLAZAMIENTODERECHA operacion
    (38) operacion -> . operacion IGUALIGUAL operacion
    (39) operacion -> . operacion NOTEQUAL operacion
    (40) operacion -> . operacion MAYORIGUAL operacion
    (41) operacion -> . operacion MENORIGUAL operacion
    (42) operacion -> . operacion MAYOR operacion
    (43) operacion -> . operacion MENOR operacion
    (44) operacion -> . operacion DIFERENTE operacion
    (45) operacion -> . PARENTESISIZQUIERDA operacion PARENTESISDERECHA
    (46) operacion -> . final
    (47) operacion -> . MENOS ENTERO
    (48) final -> . DECIMAL
    (49) final -> . ENTERO
    (50) final -> . ID
    (51) final -> . ID PUNTO ID

    $end            reduce using rule 1 (inicio -> queries .)
    SHOW            shift and go to state 9
    CREATE          shift and go to state 10
    ALTER           shift and go to state 12
    DROP            shift and go to state 13
    PARENTESISIZQUIERDA shift and go to state 15
    MENOS           shift and go to state 14
    DECIMAL         shift and go to state 18
    ENTERO          shift and go to state 17
    ID              shift and go to state 11

    query                          shift and go to state 19
    mostrarBD                      shift and go to state 4
    crearBD                        shift and go to state 5
    alterBD                        shift and go to state 6
    dropBD                         shift and go to state 7
    operacion                      shift and go to state 8
    final                          shift and go to state 16

state 3

    (3) queries -> query .

    SHOW            reduce using rule 3 (queries -> query .)
    CREATE          reduce using rule 3 (queries -> query .)
    ALTER           reduce using rule 3 (queries -> query .)
    DROP            reduce using rule 3 (queries -> query .)
    PARENTESISIZQUIERDA reduce using rule 3 (queries -> query .)
    MENOS           reduce using rule 3 (queries -> query .)
    DECIMAL         reduce using rule 3 (queries -> query .)
    ENTERO          reduce using rule 3 (queries -> query .)
    ID              reduce using rule 3 (queries -> query .)
    $end            reduce using rule 3 (queries -> query .)


state 4

    (4) query -> mostrarBD .

    SHOW            reduce using rule 4 (query -> mostrarBD .)
    CREATE          reduce using rule 4 (query -> mostrarBD .)
    ALTER           reduce using rule 4 (query -> mostrarBD .)
    DROP            reduce using rule 4 (query -> mostrarBD .)
    PARENTESISIZQUIERDA reduce using rule 4 (query -> mostrarBD .)
    MENOS           reduce using rule 4 (query -> mostrarBD .)
    DECIMAL         reduce using rule 4 (query -> mostrarBD .)
    ENTERO          reduce using rule 4 (query -> mostrarBD .)
    ID              reduce using rule 4 (query -> mostrarBD .)
    $end            reduce using rule 4 (query -> mostrarBD .)


state 5

    (5) query -> crearBD .

    SHOW            reduce using rule 5 (query -> crearBD .)
    CREATE          reduce using rule 5 (query -> crearBD .)
    ALTER           reduce using rule 5 (query -> crearBD .)
    DROP            reduce using rule 5 (query -> crearBD .)
    PARENTESISIZQUIERDA reduce using rule 5 (query -> crearBD .)
    MENOS           reduce using rule 5 (query -> crearBD .)
    DECIMAL         reduce using rule 5 (query -> crearBD .)
    ENTERO          reduce using rule 5 (query -> crearBD .)
    ID              reduce using rule 5 (query -> crearBD .)
    $end            reduce using rule 5 (query -> crearBD .)


state 6

    (6) query -> alterBD .

    SHOW            reduce using rule 6 (query -> alterBD .)
    CREATE          reduce using rule 6 (query -> alterBD .)
    ALTER           reduce using rule 6 (query -> alterBD .)
    DROP            reduce using rule 6 (query -> alterBD .)
    PARENTESISIZQUIERDA reduce using rule 6 (query -> alterBD .)
    MENOS           reduce using rule 6 (query -> alterBD .)
    DECIMAL         reduce using rule 6 (query -> alterBD .)
    ENTERO          reduce using rule 6 (query -> alterBD .)
    ID              reduce using rule 6 (query -> alterBD .)
    $end            reduce using rule 6 (query -> alterBD .)


state 7

    (7) query -> dropBD .

    SHOW            reduce using rule 7 (query -> dropBD .)
    CREATE          reduce using rule 7 (query -> dropBD .)
    ALTER           reduce using rule 7 (query -> dropBD .)
    DROP            reduce using rule 7 (query -> dropBD .)
    PARENTESISIZQUIERDA reduce using rule 7 (query -> dropBD .)
    MENOS           reduce using rule 7 (query -> dropBD .)
    DECIMAL         reduce using rule 7 (query -> dropBD .)
    ENTERO          reduce using rule 7 (query -> dropBD .)
    ID              reduce using rule 7 (query -> dropBD .)
    $end            reduce using rule 7 (query -> dropBD .)


state 8

    (8) query -> operacion .
    (25) operacion -> operacion . MAS operacion
    (26) operacion -> operacion . MENOS operacion
    (27) operacion -> operacion . POR operacion
    (28) operacion -> operacion . DIV operacion
    (29) operacion -> operacion . RESIDUO operacion
    (30) operacion -> operacion . POTENCIA operacion
    (31) operacion -> operacion . AND operacion
    (32) operacion -> operacion . OR operacion
    (33) operacion -> operacion . SIMBOLOOR2 operacion
    (34) operacion -> operacion . SIMBOLOOR operacion
    (35) operacion -> operacion . SIMBOLOAND2 operacion
    (36) operacion -> operacion . DESPLAZAMIENTOIZQUIERDA operacion
    (37) operacion -> operacion . DESPLAZAMIENTODERECHA operacion
    (38) operacion -> operacion . IGUALIGUAL operacion
    (39) operacion -> operacion . NOTEQUAL operacion
    (40) operacion -> operacion . MAYORIGUAL operacion
    (41) operacion -> operacion . MENORIGUAL operacion
    (42) operacion -> operacion . MAYOR operacion
    (43) operacion -> operacion . MENOR operacion
    (44) operacion -> operacion . DIFERENTE operacion

  ! shift/reduce conflict for MENOS resolved as shift
    SHOW            reduce using rule 8 (query -> operacion .)
    CREATE          reduce using rule 8 (query -> operacion .)
    ALTER           reduce using rule 8 (query -> operacion .)
    DROP            reduce using rule 8 (query -> operacion .)
    PARENTESISIZQUIERDA reduce using rule 8 (query -> operacion .)
    DECIMAL         reduce using rule 8 (query -> operacion .)
    ENTERO          reduce using rule 8 (query -> operacion .)
    ID              reduce using rule 8 (query -> operacion .)
    $end            reduce using rule 8 (query -> operacion .)
    MAS             shift and go to state 20
    MENOS           shift and go to state 21
    POR             shift and go to state 22
    DIV             shift and go to state 23
    RESIDUO         shift and go to state 24
    POTENCIA        shift and go to state 25
    AND             shift and go to state 26
    OR              shift and go to state 27
    SIMBOLOOR2      shift and go to state 28
    SIMBOLOOR       shift and go to state 29
    SIMBOLOAND2     shift and go to state 30
    DESPLAZAMIENTOIZQUIERDA shift and go to state 31
    DESPLAZAMIENTODERECHA shift and go to state 32
    IGUALIGUAL      shift and go to state 33
    NOTEQUAL        shift and go to state 34
    MAYORIGUAL      shift and go to state 35
    MENORIGUAL      shift and go to state 36
    MAYOR           shift and go to state 37
    MENOR           shift and go to state 38
    DIFERENTE       shift and go to state 39

  ! MENOS           [ reduce using rule 8 (query -> operacion .) ]


state 9

    (17) mostrarBD -> SHOW . DATABASES PUNTOYCOMA

    DATABASES       shift and go to state 40


state 10

    (9) crearBD -> CREATE . DATABASE ID PUNTOYCOMA
    (10) crearBD -> CREATE . OR REPLACE DATABASE ID PUNTOYCOMA
    (11) crearBD -> CREATE . OR REPLACE DATABASE ID parametrosCrearBD PUNTOYCOMA
    (12) crearBD -> CREATE . DATABASE ID parametrosCrearBD PUNTOYCOMA

    DATABASE        shift and go to state 41
    OR              shift and go to state 42


state 11

    (50) final -> ID .
    (51) final -> ID . PUNTO ID

    MAS             reduce using rule 50 (final -> ID .)
    MENOS           reduce using rule 50 (final -> ID .)
    POR             reduce using rule 50 (final -> ID .)
    DIV             reduce using rule 50 (final -> ID .)
    RESIDUO         reduce using rule 50 (final -> ID .)
    POTENCIA        reduce using rule 50 (final -> ID .)
    AND             reduce using rule 50 (final -> ID .)
    OR              reduce using rule 50 (final -> ID .)
    SIMBOLOOR2      reduce using rule 50 (final -> ID .)
    SIMBOLOOR       reduce using rule 50 (final -> ID .)
    SIMBOLOAND2     reduce using rule 50 (final -> ID .)
    DESPLAZAMIENTOIZQUIERDA reduce using rule 50 (final -> ID .)
    DESPLAZAMIENTODERECHA reduce using rule 50 (final -> ID .)
    IGUALIGUAL      reduce using rule 50 (final -> ID .)
    NOTEQUAL        reduce using rule 50 (final -> ID .)
    MAYORIGUAL      reduce using rule 50 (final -> ID .)
    MENORIGUAL      reduce using rule 50 (final -> ID .)
    MAYOR           reduce using rule 50 (final -> ID .)
    MENOR           reduce using rule 50 (final -> ID .)
    DIFERENTE       reduce using rule 50 (final -> ID .)
    SHOW            reduce using rule 50 (final -> ID .)
    CREATE          reduce using rule 50 (final -> ID .)
    ALTER           reduce using rule 50 (final -> ID .)
    DROP            reduce using rule 50 (final -> ID .)
    PARENTESISIZQUIERDA reduce using rule 50 (final -> ID .)
    DECIMAL         reduce using rule 50 (final -> ID .)
    ENTERO          reduce using rule 50 (final -> ID .)
    ID              reduce using rule 50 (final -> ID .)
    $end            reduce using rule 50 (final -> ID .)
    PARENTESISDERECHA reduce using rule 50 (final -> ID .)
    PUNTOYCOMA      reduce using rule 50 (final -> ID .)
    OWNER           reduce using rule 50 (final -> ID .)
    MODE            reduce using rule 50 (final -> ID .)
    PUNTO           shift and go to state 43


state 12

    (18) alterBD -> ALTER . DATABASE ID RENAME TO ID PUNTOYCOMA
    (19) alterBD -> ALTER . DATABASE ID OWNER TO parametroAlterUser PUNTOYCOMA

    DATABASE        shift and go to state 44


state 13

    (23) dropBD -> DROP . DATABASE ID PUNTOYCOMA
    (24) dropBD -> DROP . DATABASE IF EXISTS ID PUNTOYCOMA

    DATABASE        shift and go to state 45


state 14

    (47) operacion -> MENOS . ENTERO

    ENTERO          shift and go to state 46


state 15

    (45) operacion -> PARENTESISIZQUIERDA . operacion PARENTESISDERECHA
    (25) operacion -> . operacion MAS operacion
    (26) operacion -> . operacion MENOS operacion
    (27) operacion -> . operacion POR operacion
    (28) operacion -> . operacion DIV operacion
    (29) operacion -> . operacion RESIDUO operacion
    (30) operacion -> . operacion POTENCIA operacion
    (31) operacion -> . operacion AND operacion
    (32) operacion -> . operacion OR operacion
    (33) operacion -> . operacion SIMBOLOOR2 operacion
    (34) operacion -> . operacion SIMBOLOOR operacion
    (35) operacion -> . operacion SIMBOLOAND2 operacion
    (36) operacion -> . operacion DESPLAZAMIENTOIZQUIERDA operacion
    (37) operacion -> . operacion DESPLAZAMIENTODERECHA operacion
    (38) operacion -> . operacion IGUALIGUAL operacion
    (39) operacion -> . operacion NOTEQUAL operacion
    (40) operacion -> . operacion MAYORIGUAL operacion
    (41) operacion -> . operacion MENORIGUAL operacion
    (42) operacion -> . operacion MAYOR operacion
    (43) operacion -> . operacion MENOR operacion
    (44) operacion -> . operacion DIFERENTE operacion
    (45) operacion -> . PARENTESISIZQUIERDA operacion PARENTESISDERECHA
    (46) operacion -> . final
    (47) operacion -> . MENOS ENTERO
    (48) final -> . DECIMAL
    (49) final -> . ENTERO
    (50) final -> . ID
    (51) final -> . ID PUNTO ID

    PARENTESISIZQUIERDA shift and go to state 15
    MENOS           shift and go to state 14
    DECIMAL         shift and go to state 18
    ENTERO          shift and go to state 17
    ID              shift and go to state 11

    operacion                      shift and go to state 47
    final                          shift and go to state 16

state 16

    (46) operacion -> final .

    MAS             reduce using rule 46 (operacion -> final .)
    MENOS           reduce using rule 46 (operacion -> final .)
    POR             reduce using rule 46 (operacion -> final .)
    DIV             reduce using rule 46 (operacion -> final .)
    RESIDUO         reduce using rule 46 (operacion -> final .)
    POTENCIA        reduce using rule 46 (operacion -> final .)
    AND             reduce using rule 46 (operacion -> final .)
    OR              reduce using rule 46 (operacion -> final .)
    SIMBOLOOR2      reduce using rule 46 (operacion -> final .)
    SIMBOLOOR       reduce using rule 46 (operacion -> final .)
    SIMBOLOAND2     reduce using rule 46 (operacion -> final .)
    DESPLAZAMIENTOIZQUIERDA reduce using rule 46 (operacion -> final .)
    DESPLAZAMIENTODERECHA reduce using rule 46 (operacion -> final .)
    IGUALIGUAL      reduce using rule 46 (operacion -> final .)
    NOTEQUAL        reduce using rule 46 (operacion -> final .)
    MAYORIGUAL      reduce using rule 46 (operacion -> final .)
    MENORIGUAL      reduce using rule 46 (operacion -> final .)
    MAYOR           reduce using rule 46 (operacion -> final .)
    MENOR           reduce using rule 46 (operacion -> final .)
    DIFERENTE       reduce using rule 46 (operacion -> final .)
    SHOW            reduce using rule 46 (operacion -> final .)
    CREATE          reduce using rule 46 (operacion -> final .)
    ALTER           reduce using rule 46 (operacion -> final .)
    DROP            reduce using rule 46 (operacion -> final .)
    PARENTESISIZQUIERDA reduce using rule 46 (operacion -> final .)
    DECIMAL         reduce using rule 46 (operacion -> final .)
    ENTERO          reduce using rule 46 (operacion -> final .)
    ID              reduce using rule 46 (operacion -> final .)
    $end            reduce using rule 46 (operacion -> final .)
    PARENTESISDERECHA reduce using rule 46 (operacion -> final .)


state 17

    (49) final -> ENTERO .

    MAS             reduce using rule 49 (final -> ENTERO .)
    MENOS           reduce using rule 49 (final -> ENTERO .)
    POR             reduce using rule 49 (final -> ENTERO .)
    DIV             reduce using rule 49 (final -> ENTERO .)
    RESIDUO         reduce using rule 49 (final -> ENTERO .)
    POTENCIA        reduce using rule 49 (final -> ENTERO .)
    AND             reduce using rule 49 (final -> ENTERO .)
    OR              reduce using rule 49 (final -> ENTERO .)
    SIMBOLOOR2      reduce using rule 49 (final -> ENTERO .)
    SIMBOLOOR       reduce using rule 49 (final -> ENTERO .)
    SIMBOLOAND2     reduce using rule 49 (final -> ENTERO .)
    DESPLAZAMIENTOIZQUIERDA reduce using rule 49 (final -> ENTERO .)
    DESPLAZAMIENTODERECHA reduce using rule 49 (final -> ENTERO .)
    IGUALIGUAL      reduce using rule 49 (final -> ENTERO .)
    NOTEQUAL        reduce using rule 49 (final -> ENTERO .)
    MAYORIGUAL      reduce using rule 49 (final -> ENTERO .)
    MENORIGUAL      reduce using rule 49 (final -> ENTERO .)
    MAYOR           reduce using rule 49 (final -> ENTERO .)
    MENOR           reduce using rule 49 (final -> ENTERO .)
    DIFERENTE       reduce using rule 49 (final -> ENTERO .)
    SHOW            reduce using rule 49 (final -> ENTERO .)
    CREATE          reduce using rule 49 (final -> ENTERO .)
    ALTER           reduce using rule 49 (final -> ENTERO .)
    DROP            reduce using rule 49 (final -> ENTERO .)
    PARENTESISIZQUIERDA reduce using rule 49 (final -> ENTERO .)
    DECIMAL         reduce using rule 49 (final -> ENTERO .)
    ENTERO          reduce using rule 49 (final -> ENTERO .)
    ID              reduce using rule 49 (final -> ENTERO .)
    $end            reduce using rule 49 (final -> ENTERO .)
    PARENTESISDERECHA reduce using rule 49 (final -> ENTERO .)
    PUNTOYCOMA      reduce using rule 49 (final -> ENTERO .)
    OWNER           reduce using rule 49 (final -> ENTERO .)
    MODE            reduce using rule 49 (final -> ENTERO .)


state 18

    (48) final -> DECIMAL .

    MAS             reduce using rule 48 (final -> DECIMAL .)
    MENOS           reduce using rule 48 (final -> DECIMAL .)
    POR             reduce using rule 48 (final -> DECIMAL .)
    DIV             reduce using rule 48 (final -> DECIMAL .)
    RESIDUO         reduce using rule 48 (final -> DECIMAL .)
    POTENCIA        reduce using rule 48 (final -> DECIMAL .)
    AND             reduce using rule 48 (final -> DECIMAL .)
    OR              reduce using rule 48 (final -> DECIMAL .)
    SIMBOLOOR2      reduce using rule 48 (final -> DECIMAL .)
    SIMBOLOOR       reduce using rule 48 (final -> DECIMAL .)
    SIMBOLOAND2     reduce using rule 48 (final -> DECIMAL .)
    DESPLAZAMIENTOIZQUIERDA reduce using rule 48 (final -> DECIMAL .)
    DESPLAZAMIENTODERECHA reduce using rule 48 (final -> DECIMAL .)
    IGUALIGUAL      reduce using rule 48 (final -> DECIMAL .)
    NOTEQUAL        reduce using rule 48 (final -> DECIMAL .)
    MAYORIGUAL      reduce using rule 48 (final -> DECIMAL .)
    MENORIGUAL      reduce using rule 48 (final -> DECIMAL .)
